# ivcap-crewai-service-runner

./: Dockerfile  LICENSE  Makefile  pyproject.toml  sbom.json
.github/workflows/: deploy_gcp.yml
deploy/: README.md  service.json
